Issue: #1217 - Make JDBC driver loading pluggable for connectors (IBM i JTOpen support)
Converted the multi-line concatenation messages to text blocks with
  \ line continuation + .formatted(